# ecommerce-ai-agent

./: .env.example  .gitignore  README.md  agent_final.py  agent_mock.py  app.py  pyproject.toml  requirements.txt  test_bedrock.py
src/ecommerce_ai_agent/: __init__.py  agent.py  config.py  database.py  sql_safety.py  ui.py
